Make setup script use the package form rather than module.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,2 @@
-include LICENSE README TODO setup.py simples3.py tests.py changes.rst
+include LICENSE README TODO setup.py tests.py changes.rst
+recursive-include simples3 *.py
